Fix Todo Counter issue

--- a/src/template.html
+++ b/src/template.html
@@ -21,16 +21,15 @@
     <main>
         <nav id="sidebar">
             <ul class="todos-selections">
-                <li id="inbox" class="active sidebar-selection">
+                <li id="inbox" class="active">
                     <img src="../src/assets/images/inbox-icon.svg" alt="inbox icon">
                     <p>Inbox</p>
-                    <div class="todos-counter">5</div>
                 </li>
-                <li id="today" class="sidebar-selection">
+                <li id="today">
                     <img src="../src/assets/images/todaycalendar-icon.svg" alt="today calendar icon">
                     <p>Today</p>
                 </li>
-                <li id="weekly" class="sidebar-selection">
+                <li id="weekly">
                     <img src="../src/assets/images/weeklycalendar-icon.svg" alt="weekly calendar icon">
                     <p>Weekly</p>
                 </li>
